# CRQ-APP

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  phase5-observability.md  pyproject.toml  server.py
.claude/: settings.json  settings.local.json
data/: active_register.json  aerowind_sites.json  audience_config.json  blocked_urls.txt  company_profile.json  master_scenarios.json  mock_crq_database.json  osint_topics.json  pptx_prompt_vault.md  region_country_map.json  regional_footprint.json  schedule_config.json  site_registry_audit.json  sources.db  validation_sources.json  youtube_sources.json
demo/: README.md
output/: board_report.pptx  dashboard.html  delivery_log.jsonl  global_report.json  global_report.md  history.json  routing_decisions.json  run_manifest.json  trend_analysis.json  trend_brief.json
poc/seerist-rsm/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
poc/seerist-rsm/.claude/agents/: rsm-formatter-agent.md  rsm-weekly-synthesizer.md
poc/seerist-rsm/data/: aerowind_sites.json  company_profile.json
poc/seerist-rsm/data/mock_osint_fixtures/: med_scribe.json  med_seerist.json
poc/seerist-rsm/docs/seerist/: api-blueprint.apib
poc/seerist-rsm/static/design/styles/: rsm.css
poc/seerist-rsm/tools/: config.py  notifier.py  osint_physical_collector.py  poi_proximity.py  seerist_client.py
poc/seerist-rsm/tools/briefs/templates/: _partials.html.j2  rsm.html.j2
static/: app.js  index.html
tests/: conftest.py  test_audience_config_daily.py  test_build_context.py  test_build_history.py  test_build_pdf.py  (+59 more)
(+511 files in other folders)
