[project]
name = "crq-agent-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "fpdf2>=2.8.7",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "sse-starlette>=3.3.2",
    "uvicorn>=0.41.0",
]
