[project]
name = "crq-agent-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.84.0",
    "fastapi>=0.135.1",
    "fpdf2>=2.8.7",
    "jinja2>=3.1.6",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "sse-starlette>=3.3.2",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
